# Zappy

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  zappy_ai
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE.yml  GUI_PROTOCOL.yml
.github/workflows/: verif_mirror.yml
AI/: Makefile  client.py  main.py
AI/src/: AI.py  client.py  core.py  management.py  utils.py
AI/tests/: test_check_if_there_is_enough_player.py  test_decrypt_crypt_string.py  test_deserialize_data.py  test_do_actions_for_level.py  test_execute_functions.py  test_management.py  test_message.py  test_parser.py  test_should_i_focus_food.py  test_take_set_object.py
GUI/: CMakeLists.txt  Makefile  main.cpp
GUI/src/: CMakeLists.txt
GUI/src/core/: Core.cpp  Core.hpp
GUI/src/errorManagement/: ErrorManagement.hpp
GUI/src/game/IUpdate/: Bct.hpp  Ebo.hpp  Edi.hpp  Enw.hpp  Factory.hpp  IUpdate.hpp  Msz.hpp  Pbc.hpp  Pdi.hpp  Pdr.hpp  Pex.hpp  Pfk.hpp  Pgt.hpp  Pic.hpp  Pie.hpp  Pin.hpp  Plv.hpp  Pnw.hpp  Ppo.hpp  Sbp.hpp  Seg.hpp  Sgt.hpp  Smg.hpp  Sst.hpp  Suc.hpp  Tna.hpp  Welcome.hpp
GUI/src/game/button/killButton/: KillButton.cpp  KillButton.hpp
GUI/src/game/button/quitButton/: QuitButton.cpp  QuitButton.hpp
GUI/src/game/button/switchTimeunitButton/: SwitchTimeunitButton.cpp  SwitchTimeunitButton.hpp
GUI/src/game/catchable/: ICatchable.hpp
GUI/src/game/container/: Container.cpp  Container.hpp
GUI/src/game/container/deraumereContainer/: DeraumereContainer.cpp  DeraumereContainer.hpp
GUI/src/game/container/foodContainer/: FoodContainer.cpp  FoodContainer.hpp
GUI/src/game/container/linemateContainer/: LinemateContainer.cpp  LinemateContainer.hpp
GUI/src/game/container/mendianeContainer/: MendianeContainer.cpp  MendianeContainer.hpp
GUI/src/game/container/phirasContainer/: PhirasContainer.cpp  PhirasContainer.hpp
GUI/src/game/container/siburContainer/: SiburContainer.cpp  SiburContainer.hpp
GUI/src/game/container/thystameContainer/: ThystameContainer.cpp  ThystameContainer.hpp
GUI/src/game/egg/: Egg.cpp  Egg.hpp
GUI/src/game/event/: IEvent.hpp
GUI/src/game/event/broadcastEvent/: BroadcastEvent.cpp  BroadcastEvent.hpp
GUI/src/game/event/eventPool/: EventPool.cpp  EventPool.hpp
GUI/src/game/event/expulsionEvent/: ExpulsionEvent.cpp  ExpulsionEvent.hpp
GUI/src/game/gameCore/: GameCore.cpp  GameCore.hpp  GameSettings.hpp
GUI/src/game/gameState/: GameState.cpp  GameState.hpp
GUI/src/game/incantation/: Incantation.cpp  Incantation.hpp
GUI/src/game/incantation/incantationEvent/: IncantationEvent.cpp  IncantationEvent.hpp
GUI/src/game/map/: Map.cpp  Map.hpp
GUI/src/game/map/tile/: Tile.cpp  Tile.hpp
GUI/src/game/player/: Player.cpp  Player.hpp
GUI/src/game/team/: Team.hpp
GUI/src/graphic/button/: AButton.cpp  AButton.hpp
GUI/src/graphic/management/: Management.cpp  Management.hpp
GUI/src/graphic/object/: Object.cpp  Object.hpp
GUI/src/graphic/object/camera/: Camera.cpp  Camera.hpp
GUI/src/graphic/object/cube/: Cube.cpp  Cube.hpp
GUI/src/graphic/object/model/: Model.cpp  Model.hpp
GUI/src/graphic/object/model/mesh/: Mesh.cpp  Mesh.hpp
GUI/src/graphic/program/: Program.cpp  Program.hpp
GUI/src/graphic/scene/: Scene.cpp  Scene.hpp
GUI/src/graphic/window/: Window.cpp  Window.hpp
GUI/src/network/IOPool/: IOPool.cpp  IOPool.hpp
GUI/src/network/IOPool/request/: IRequest.hpp
GUI/src/network/IOPool/request/request/: Request.hpp
GUI/src/network/IOPool/response/: Response.cpp  Response.hpp
GUI/src/network/client/: Client.cpp  Client.hpp  IClient.hpp
GUI/src/network/client/IOPooledClient/: IOPooledClient.cpp  IOPooledClient.hpp
GUI/src/network/client/client/: Client.hpp
GUI/src/network/sockaddrIn/: SockaddrIn.cpp  SockaddrIn.hpp
GUI/src/network/socket/: ISocket.hpp  Socket.cpp  Socket.hpp
GUI/src/network/socket/IOPooledSocket/: IOPooledSocket.cpp  IOPooledSocket.hpp
GUI/src/utils/: FileUtils.hpp  ObjLoader.cpp  ObjLoader.hpp  StringUtils.hpp
GUI/tests/: CMakeLists.txt
GUI/tests/ftCube/: CMakeLists.txt  ftCube.cpp
GUI/tests/ftObjLoader/: CMakeLists.txt  ftObjLoader.cpp
GUI/tests/ftScene/: CMakeLists.txt  ftScene.cpp  vertexShader.vertexshader
GUI/tests/ftSenpai/: CMakeLists.txt  ftSenpai.cpp
GUI/tests/ftText/: main.cpp
GUI/tests/network/: tests_client.cpp  tests_socket.cpp
assets/makima/: license.txt  scene.gltf
bonus/: zappy_bonus
bonus/src/: Destructor.py  core.py  main.py  management.py
server/: Makefile  display_log.c  egg.c  main.c
server/client/: client.c
server/display/: display_log.c
server/game/: gameloop.c  gameloop_check_special_event.c  player_command.c  refill_food.c
server/game/check_function/: check_win.c
server/game/check_functions/: check_functions.c
server/game/command/: connect_nbr.c  connection.c  fork.c  forward.c  inventory.c  move_functions.c  set_object.c  turn.c
server/game/gui_protocol/: gui_bct.c  gui_ebo.c  gui_edi.c  gui_enw.c  gui_kil.c  gui_mct.c  gui_msz.c  gui_pbc.c  gui_pdi.c  gui_pdr.c  gui_pex.c  gui_pfk.c  gui_pgt.c  gui_pic.c  gui_pin.c  gui_plv.c  gui_pnw.c  gui_ppo.c  gui_sbp.c  gui_seg.c  gui_sgt.c  gui_smg.c  gui_sst.c  gui_suc.c  gui_tna.c  handle_event.c
server/game/initialize/: clan.c  clans_lists.c  create_list_clans.c  egg.c  game_struct.c  map.c  trantorian.c
server/game/manage_timer/: update_players.c
server/game/refill_obj/: generation_list_stone.c  malloc_tab_array.c  management_stone.c
server/include/: all_objects.h  clan.h  client.h  egg.h  event.h  game_struct.h  map.h  network.h  response.h  server.h  trantorian.h
server/initialize/: clan.c  game_struct.c  initialize_trantorian.c
server/network/: write.c
server/parser/: get_freq.c  get_height.c  get_nb_client.c  get_port.c  get_width.c  parse_args.c
server/parser_args/: get_freq.c  get_height.c  get_names.c  get_nb_client.c  get_port.c  get_width.c  parse_args.c
server/response/: response.c
server/run/: handle_clients.c  run.c
server/tests/: tests_build_server.c
tests/: epitest.sh
tests/game/: tests_stone.c
tests/tests_server/: tests_build_server.c
utils/: vector.h
(+111 files in other folders)
